--- a/src/calendar/CalendarEvents/CalendarEvents.module.css
+++ b/src/calendar/CalendarEvents/CalendarEvents.module.css
@@ -22,11 +22,15 @@
   position: absolute;
   inset: 0;
   display: grid;
-  grid-template-rows: repeat(48, 49px);
+  grid-template-rows: 32px auto;
 }
 
 .horisontal_lines div {
   border-bottom: 1px solid #e6e7e9;
+}
+
+.horisontal_lines div:last-child {
+  border-bottom: none;
 }
 
 .vertical_lines {
@@ -51,10 +55,14 @@
 }
 
 .time_label {
+  box-sizing: border-box;
   position: relative;
   display: inline-block;
   color: #999;
   font-size: 12px;
-  left: -36px;
+  left: -54px;
   top: -12px;
+  width: 54px;
+  padding: 0 6px;
+  text-align: right;
 }
